@startuml
class DZ5.accautingUser.view.CreateCommand {
+ void method()
}
class DZ5.accautingUser.model.NameAndSurnameValidator {
- String userInput
+ void validate()
}
class DZ5.accautingUser.model.FileOperationImpl {
- String fileName
+ List<String> readAllLines()
+ void saveAllLines(List<String>)
}
interface DZ5.accautingUser.view.CommandsInt {
~ void method()
}
class DZ5.accautingUser.view.ReadCommand {
+ void method()
}
abstract class DZ5.accautingUser.view.Command {
~ UserController userController
}
enum DZ5.accautingUser.view.Commands {
+  NONE
+  READ
+  CREATE
+  UPDATE
+  LIST
+  DELETE
+  EXIT
}
class DZ5.accautingUser.view.UpdateCommand {
+ void method()
}
class DZ5.accautingUser.model.RepositoryFile {
- UserMapper mapper
- FileOperation fileOperation
+ List<User> getAllUsers()
+ String addUserToBase(User)
+ User updateUser(User)
+ void deleteUser(User)
}
class DZ5.accautingUser.controller.UserController {
- Repository repository
- User getUser()
+ void createUser()
+ void readUser()
+ void readList()
+ void updateUser()
+ void deleteUser()
- User getNewUser()
+ {static} String prompt(String)
}
class DZ5.accautingUser.view.DeleteCommand {
+ void method()
}
interface DZ5.accautingUser.model.FileOperation {
~ List<String> readAllLines()
~ void saveAllLines(List<String>)
}
class DZ5.accautingUser.model.User {
- String id
- String name
- String surname
- String phone
+ String getId()
+ void setId(String)
+ String getName()
+ void setName(String)
+ String getSurname()
+ void setSurname(String)
+ String getPhone()
+ void setPhone(String)
+ String toString()
}
interface DZ5.accautingUser.model.Repository {
~ List<User> getAllUsers()
~ String addUserToBase(User)
~ User updateUser(User)
~ void deleteUser(User)
}
class DZ5.accautingUser.Main {
+ {static} void main(String[])
}
class DZ5.accautingUser.model.UserMapper {
+ String mapUserToString(User)
+ User mapStringToUser(String)
+ List<String> mapToString(List<User>)
}
class DZ5.accautingUser.view.ListCommand {
+ void method()
}


DZ5.accautingUser.view.Command <|-- DZ5.accautingUser.view.CreateCommand
DZ5.accautingUser.model.FileOperation <|.. DZ5.accautingUser.model.FileOperationImpl
DZ5.accautingUser.view.Command <|-- DZ5.accautingUser.view.ReadCommand
DZ5.accautingUser.view.CommandsInt <|.. DZ5.accautingUser.view.Command
DZ5.accautingUser.view.Command <|-- DZ5.accautingUser.view.UpdateCommand
DZ5.accautingUser.model.Repository <|.. DZ5.accautingUser.model.RepositoryFile
DZ5.accautingUser.view.Command <|-- DZ5.accautingUser.view.DeleteCommand
DZ5.accautingUser.view.Command <|-- DZ5.accautingUser.view.ListCommand
@enduml